--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="https://use.fontawesome.com/1625bb79ec.js"></script>
 	<!--FUENTE-->
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Merriweather:300i,900i" rel="stylesheet">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!--CSS-->
@@ -46,7 +47,17 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-xs-12 text-center">
-					<!--texto-bienvenida-->
+					<h2 class="font-welcome">Welcome To Our Studio!</h2>
+				</div>
+				<div class="row">
+					<div class="col-md-12 col-xs-12 text-center">
+						<h1>IT'S NICE TO MEET YOU</h1>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-md-12 col-xs-12 text-center">
+						<!--boton-->
+					</div>
 				</div>
 			</div>
 		</div>
