--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                     <h5 class= "text-muted font-welcome2">Lorem ipsum dolor sit amet consectetur.</h5>
                 </div>
             </div>
-            <div class="row">
+            <div class="row fondo-img">
                 <div class="col-md-4 col-xs-12 col-sm-12 text-center">
                     <a href="#portfolioModal1" data-toggle="modal">
-                        <img src="img/roundicons.png" class="img-responsive" alt="">
+                        <img src="img/roundicons.png" class="img-responsive" alt="imagen">
                     </a>
                     <div>
                         <h4><b>Round Icons</b></h4>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12 col-sm-12 text-center">
                     <a href="#portfolioModal2" data-toggle="modal">
-                        <img src="img/startup-framework.png" class="img-responsive" alt="">
+                        <img src="img/startup-framework.png" class="img-responsive" alt="imagen">
                     </a>
                     <div>
                         <h4><b>Startup Framework</b></h4>
@@ -135,7 +135,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12 col-sm-12 text-center">
                     <a href="#portfolioModal3" data-toggle="modal">
-                        <img src="img/treehouse.png" class="img-responsive" alt="">
+                        <img src="img/treehouse.png" class="img-responsive" alt="imagen">
                     </a>
                     <div>
                         <h4><b>Treehouse</b></h4>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12 col-sm-12 text-center">
                     <a href="#portfolioModal4" data-toggle="modal">
-                        <img src="img/golden.png" class="img-responsive" alt="">
+                        <img src="img/golden.png" class="img-responsive" alt="imagen">
                     </a>
                     <div>
                         <h4><b>Golden</b></h4>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12 col-sm-12 text-center">
                     <a href="#portfolioModal5" data-toggle="modal">
-                        <img src="img/escape.png" class="img-responsive" alt="">
+                        <img src="img/escape.png" class="img-responsive" alt="imagen">
                     </a>
                     <div>
                         <h4><b>Escape</b></h4>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-md-4 col-xs-12 col-sm-12 text-center">
                     <a href="#portfolioModal6" data-toggle="modal">
-                        <img src="img/dreams.png" class="img-responsive" alt="">
+                        <img src="img/dreams.png" class="img-responsive" alt="imagen">
                     </a>
                     <div class="portfolio-caption">
                         <h4><b>Dreams</b></h4>
