arreglando ultimos detalles

--- a/index.html
+++ b/index.html
@@ -582,9 +582,9 @@
 	                </div>
 	                <div class="col-md-4 text-center">
 	                    <ul class="list-inline">
-	                        <li><a href="#">Privacy Policy</a>
+	                        <li><a class="link-footer" href="#">Privacy Policy</a>
 	                        </li>
-	                        <li><a href="#">Terms of Use</a>
+	                        <li><a class="link-footer" href="#">Terms of Use</a>
 	                        </li>
 	                    </ul>
 	                </div>
